# system-mcp

./: pyproject.toml
src/: __init__.py  __main__.py  server.py
src/tools/: __init__.py  system.py
