[project]
name = "sys-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.18.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
sys-mcp = "src.__main__:main"

[dependency-groups]
dev = [
    "mcp-cli>=0.8.4",
]
